samples/_failures_safe/1761445390_b21f01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac8150f0.c: In function ‘main’:
./samples/SAFE/__tmp_ac8150f0.c:152:12: error: expected declaration or statement at end of input
  152 |     struct TransitionTable tt;
      |            ^~~~~~~~~~~~~~~
